--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,11 +7,11 @@ on:
     branches:
       - master
     paths:
-      - "packages/container/**"
+      - "container/**"
 
 defaults:
   run:
-    working-directory: packages/container
+    working-directory: container
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
 
       - uses: ItsKarma/aws-cli@v1.70.0
         with:
-          args: s3 sync packages/container/dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
+          args: s3 sync container/dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
