--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -10,7 +10,7 @@ defaults:
     working-directory: container
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - run: npm install
